--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF8" />
   <title>Minimal JS front-end app</title>
+  <script src="src/ctrl/initialize.js"></script>
+  <script src="src/model/Book.js"></script>
 </head>
 <body>
   <h1>Public Library</h1>
